cabal-version:      2.4
name:               Pong
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Jens Danbolt
maintainer:         jens_bolt92@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Pong
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        GUI
        Physics
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      gloss,
                      directory

    hs-source-dirs:   app,
                      src
    default-language: Haskell2010
